--- a/form.css
+++ b/form.css
@@ -23,10 +23,10 @@ legend {
 
 fieldset {
     background-color: #21D4FD;
-    background-image: linear-gradient(19deg, #B721FF , #21D4FD );
-    box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
-    -webkit-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
-    -moz-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
+    background-image: linear-gradient(19deg, #B721FF, #21D4FD);
+    box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.75);
+    -webkit-box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.75);
+    -moz-box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.75);
 }
 
 .ubah {
